--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "axois": "0.0.1-security",
+    "axios": "^0.19.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
